DevTools: increase the min sidebar width to make sure close button is always visible.
BUG=438116

Review URL: https://codereview.chromium.org/761783003

git-svn-id: svn://svn.chromium.org/blink/trunk@186327 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/ui/statusBar.css
+++ b/front_end/ui/statusBar.css
@@ -89,11 +89,11 @@
 } /* media */
 
 .narrow button.status-bar-item {
-    width: 28px;
+    width: 26px;
 }
 
 .narrow button.status-bar-item .glyph {
-    margin: 0 -2px;
+    margin: 0 -3px;
 }
 
 button.status-bar-item {
